<resources>
    <string name="app_name">SystemUI Tuner</string>
    <string name="manager_channel">Manager (Turn Off)</string>
    <string name="tap_to_disable">Tap to disable this notification</string>
    <string name="home">Home</string>
    <string name="category_display">Display</string>
    <string name="category_accessibility">Accessibility</string>
    <string name="category_apps">Apps</string>
    <string name="category_audio">Audio &amp; Sound</string>
    <string name="category_developer">Developer</string>
    <string name="category_easter_eggs">Easter Eggs</string>
    <string name="category_network">Network</string>
    <string name="category_notifications">Notifications</string>
    <string name="category_status_bar">Status Bar</string>
    <string name="category_oem">OEM Features</string>
    <string name="category_system">System</string>
    <string name="category_ui">UI</string>
    <string name="category_lock_screen">Lock Screen</string>
    <string name="category_quick_settings">Quick Settings</string>
    <string name="screen_persistent">Persistent Options</string>
    <string name="category_interaction">Interaction</string>
    <string name="more">More</string>
    <string name="tweaks">Tweaks</string>
    <string name="failure">Failure</string>
    <string name="help_translate">Help Translate</string>
    <string name="sub_cellular">Cellular</string>
    <string name="sub_wifi">Wi-Fi</string>
    <string name="sub_miscellaneous">Miscellaneous</string>
    <string name="sub_htc">HTC</string>
    <string name="sub_huawei">Huawei/Honor</string>
    <string name="sub_lg">LG</string>
    <string name="sub_oneplus">OnePlus</string>
    <string name="sub_samsung">Samsung</string>
    <string name="sub_sony">Sony</string>
    <string name="sub_xiaomi">Xiaomi</string>
    <string name="sub_security">Security</string>
    <string name="sub_storage">Storage</string>
    <string name="sub_power">Power</string>
    <string name="add_to_blacklist">Add to Icon Blacklist</string>
    <string name="remove_from_blacklist">Remove from Icon Blacklist</string>
    <string name="flashlight">Flashlight</string>
    <string name="sub_demo">Demo Mode</string>
    <string name="sub_demo_desc">Demo Mode allows you to force your device\'s status bar into different states. You can use it to show or hide specific icons, specify signal strengths, and a few other things.</string>
    <string name="special_sub_airplane_mode">Airplane Mode Tweaks</string>
    <string name="special_sub_airplane_mode_desc">Airplane mode automatically disables all radios on your device when it is toggled. You can specify which radios should be disabled (such as keeping WiFi on when enabling airplane mode). Also, you can change which radios can be toggled manually when the device enters airplane mode.</string>
    <string name="special_sub_icon_blacklist">Icon Blacklist</string>
    <string name="special_sub_icon_blacklist_desc">Choose specific icons to hide from the status bar. Note that this feature will not work on all devices or with all icons. Notification icons cannot be hidden using this feature.</string>
    <string name="feature_lock_timeout">Set Custom Device Lock Timeout</string>
    <string name="feature_lock_timeout_desc">Under the \"secure lock settings\", you can set an \"automatically lock\" timer. This timer determines how long after the device enters sleep mode that the lock screen should be displayed. Through this option, you can set whatever value (in milliseconds) that you want. If you set a high enough value, then essentially your lock screen will never show (provided you have disabled the \"power button instantly locks device\" feature).</string>
    <string name="feature_battery_saver_trigger">Set Custom Battery Saver Trigger Percent</string>
    <string name="feature_battery_saver_trigger_desc" formatted="false">Google\'s Battery Saver feature can automatically trigger when the battery level is at 5\% or 15\%. With this, you can set your own trigger percent.</string>
    <string name="feature_long_press_delay">Set Custom Long Press Delay</string>
    <string name="feature_long_press_delay_desc">In Accessibility settings, there\'s a feature called \"touch &amp; hold delay\" which allows you to specify how long you have to hold down on the screen for Android to recognize a long-press event. However, the only options by default are \"short\", “medium\", and \"long.\" You can set your own delay.</string>
    <string name="feature_font_scale">Set Custom Font Scale</string>
    <string name="feature_font_scale_desc">Android allows you to set the size of the text shown on your device by specifying a system-wide font scale. This value is typically represented as \"small\", \"normal\", \"large\", \"huge\", and \"extra huge.\" However, you can set your own custom value.</string>
    <string name="feature_freeform">Enable Freeform Multiwindow</string>
    <string name="feature_freeform_desc">Whether to enable freeform multiwindow support. Requires reboot. Only works on Android 7.0+ devices.</string>
    <string name="feature_app_install_location">Set Default App Install Location</string>
    <string name="feature_app_install_location_desc">Default app install location. Choose which storage apps are installed to by default. Normally, apps themselves decide by specifying the value in the AndroidManifest, but you can choose to have them install to the adoptable storage medium if you want.</string>
    <string name="feature_heads_up_notifications">Heads Up Notification Toggle</string>
    <string name="feature_heads_up_notifications_desc">Toggle to globally enable or disable heads up notifications. Heads up notifications are the notifications that pop up at the top of the screen.</string>
    <string name="feature_insufficient_storage_warning">Bypass \"Insufficient Storage Available\" Warning</string>
    <string name="feature_insufficient_storage_warning_desc">When your device reaches a certain threshold value of available storage, Android displays a warning that your device has insufficient amounts of storage available. This can prevent you from installing new apps or updates. You can manually lower the threshold value to prevent this warning from showing.</string>
    <string name="feature_keep_screen_on">Keep the Device On when Plugged In</string>
    <string name="feature_keep_screen_on_desc">In Android\'s Developer Settings, you can select the option to keep the screen on when plugged into power. By default, this enables the feature for all power sources. You can specify which power sources you want to have your phone\'s screen to stay on.</string>
    <string name="feature_custom_animation_scales">Set Custom Animation Scales</string>
    <string name="feature_custom_animation_scales_desc">In Android\'s Developer Settings, you can set animation scales to control the duration of animations. If the available options are too fast or slow for you, you can set custom values here.</string>
    <string name="feature_custom_rotation">Lock Screen Orientation to Custom Value</string>
    <string name="feature_custom_rotation_desc">Most phones only allow you to lock your phone\'s screen orientation to Portrait mode. With this setting, you can lock screen orientation to any orientation. You will first have to disable auto-rotate before this will work.</string>
    <string name="feature_immersive_mode">Immersive Mode</string>
    <string name="feature_immersive_mode_desc">Most other applications that allow you to toggle immersive mode only have a few options: hide the navigation bar or hide the status bar. It\'s actually possible to set this on a per-app basis, in either whitelist or blacklist mode. Note that on Android 11 and above, this option is broken in AOSP and may no longer work on your device.</string>
    <string name="feature_heads_up_snooze_length">Heads-Up Notification Snooze Length</string>
    <string name="feature_heads_up_snooze_length_desc">Milliseconds after a heads up notification is pushed back before the app can interrupt again. (Default: 60 seconds).</string>
    <string name="feature_camera_gestures">Camera Gestures</string>
    <string name="feature_camera_gestures_desc">Enabling this may allow your phone to quickly launch the camera by double tapping the power button or flipping the phone between back and front.</string>
    <string name="feature_disable_safe_audio_warning">Disable Safe Audio Warning</string>
    <string name="feature_disable_safe_audio_warning_desc">EU regulations require smartphones to warn when going above certain volume levels (85dB). This warning must be shown once after every reboot or after 20 hours of continuous music playback. Use this setting to change how that warning behaves, or disable it entirely. Make sure to enable this setting in Persistent Options for it to stick.</string>
    <string name="feature_custom_ui_sounds">Set Custom UI Sounds</string>
    <string name="feature_custom_ui_sounds_desc">Android has a lot of sounds for different parts of the UI. A lot of these can actually be changed to your own custom sounds. You just need to specify the file for Android to use.</string>
    <string name="feature_fix_tethering">Fix Tethering</string>
    <string name="feature_fix_tethering_desc">On some devices and Android versions, this may bypass carrier restrictions on tethering.</string>
    <string name="feature_shortcode_warning">Disable SMS Short Code Confirmation</string>
    <string name="feature_shortcode_warning_desc">When sending SMS to certain short codes, the system warns you that you may be charged a fee. You can disable that warning here.</string>
    <string name="feature_sms_limit">Custom SMS Limit</string>
    <string name="feature_sms_limit_desc">By default, Android limits you to sending 30 SMS every 30 minutes before bothering you with a pop-up notification. Using these two values, you can customize however many SMS you want to be able to send without being bothered.</string>
    <string name="feature_lockscreen_shortcuts">Lock Screen Shortcuts</string>
    <string name="feature_lockscreen_shortcuts_desc">Starting with Android Oreo Developer Preview 3, Google removed the ability to customize the lock screen shortcuts. However, the preference value can still be set manually.</string>
    <string name="feature_enable_adb">Enable ADB</string>
    <string name="feature_enable_adb_desc">Certain devices disable ADB automatically after a period of inactivity. Enable this option and set it as a Persistent Option to force-enable ADB.</string>
    <string name="feature_dark_mode">Enable Global Dark Mode</string>
    <string name="feature_clock_seconds">Show Clock Seconds</string>
    <string name="feature_clock_seconds_desc">Enable seconds in the status bar clock. This won\'t work on all devices and configurations, including MIUI and One UI.</string>
    <string name="option_qqs_tiles">Quick Settings Header Count</string>
    <string name="option_qqs_tiles_desc">Android Nougat introduced a new quick settings feature, called the Quick Settings Header, that shows the first few quick settings tiles in a single row in the notification shade. Using this option, it\'s possible to increase or decrease the number of tiles shown in that row. This will not work on One UI.</string>
    <string name="option_qs_fancy_anim">QS Fancy Animation</string>
    <string name="option_qs_fancy_anim_desc">On supported devices, you can use this to disable the fancy QS tile movement and fading when fully expanding the notification center. If this doesn\'t seem to have an effect on your device, keep it turned on to avoid other issues.</string>
    <string name="tile_battery">Battery</string>
    <string name="tile_clock">Clock</string>
    <string name="tile_demo">Demo Mode</string>
</resources>