<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.zacharee1.systemuituner.prefs.secure.SecureSwitchPreference
        android:title="@string/feature_freeform"
        android:summary="@string/feature_freeform_desc"
        android:key="enable_freeform_support"
        android:icon="@drawable/window_restore"
        app:icon_color="@color/pref_color_3"
        app:settings_type="global"
        app:low_api="24"
        />

    <com.zacharee1.systemuituner.prefs.secure.SecureListPreference
        android:title="@string/feature_app_install_location"
        android:summary="@string/feature_app_install_location_desc"
        android:key="default_install_location"
