<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.zacharee1.systemuituner.prefs.secure.SecureSeekBarPreference
        android:title="@string/option_qqs_tiles"
        android:summary="@string/option_qqs_tiles_desc"
        android:key="sysui_qqs_count"
        android:icon="@drawable/ic_baseline_more_horiz_24"
        android:defaultValue="5"
        app:icon_color="@color/pref_color_3"
        app:settings_type="secure"
        app:scale="1"
        app:minValue="1"
        app:maxValue="12"
        app:low_api="24"
        app:high_api="31"
        />

    <com.zacharee1.systemuituner.prefs.secure.SecureSwitchPreference
        android:title="@string/option_qs_fancy_anim"
        android:summary="@string/option_qs_fancy_anim_desc"
        android:key="sysui_qs_fancy_anim"
        android:icon="@drawable/animation"
        android:defaultValue="1"
        app:icon_color="@colo